--- a/index.html
+++ b/index.html
@@ -2,18 +2,20 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>My Student Bio</title>
+	<title>My Profile Page</title>
 
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<header>
-		<h1>Student Profile Page</h1>
+		<h1>Student Bio</h1>
 	</header>
 
 	<div class="container">
 		<section id="main-bio">
+			
 			<h2>Mohamed Abdi</h2>
+
 			<img src="70259863_1317789278401095_2204331053445808128_o.jpg" alt="image"height="300px"width="300px">
       
 			<h3>My life story</h3>
